--- a/NeverSerender/NeverSerender.csproj
+++ b/NeverSerender/NeverSerender.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A061FC6C-713E-42CD-B413-151AC8A5074C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClientPlugin</RootNamespace>
-    <AssemblyName>PluginTemplate</AssemblyName>
+    <RootNamespace>NeverSerender</RootNamespace>
+    <AssemblyName>NeverSerender</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <LangVersion>7.3</LangVersion>
@@ -514,8 +514,11 @@
     <Compile Include="MaterialFiles.cs" />
     <Compile Include="Material.cs" />
     <Compile Include="Exporter.cs" />
+    <Compile Include="AssetIdentifier.cs" />
+    <Compile Include="MiniLog.cs" />
     <Compile Include="NeverSerenderPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderTexture.cs" />
     <Compile Include="TextureExporter.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="Util2.cs" />
