--- a/NeverSerender/NeverSerender.csproj
+++ b/NeverSerender/NeverSerender.csproj
@@ -283,7 +283,6 @@
     <Reference Include="System.Net.WebSockets.Client, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <HintPath>..\Bin64\System.Net.WebSockets.Client.dll</HintPath>
     </Reference>
-    <Reference Include="System.Numerics" />
     <Reference Include="System.ObjectModel, Version=4.0.11.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <HintPath>..\Bin64\System.ObjectModel.dll</HintPath>
     </Reference>
@@ -493,38 +492,40 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Lib.Harmony">
-      <Version>2.2.2</Version>
+      <Version>2.3.3</Version>
     </PackageReference>
     <PackageReference Include="Pfim">
       <Version>0.11.2</Version>
     </PackageReference>
-    <PackageReference Include="SharpGLTF.Core">
-      <Version>1.0.0-alpha0031</Version>
-    </PackageReference>
-    <PackageReference Include="SharpGLTF.Runtime">
-      <Version>1.0.0-alpha0031</Version>
-    </PackageReference>
-    <PackageReference Include="SharpGLTF.Toolkit">
-      <Version>1.0.0-alpha0031</Version>
-    </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssetLibrary.cs" />
     <Compile Include="Capture.cs" />
-    <Compile Include="MaterialFiles.cs" />
-    <Compile Include="Material.cs" />
+    <Compile Include="EntityChangeTracker.cs" />
     <Compile Include="Exporter.cs" />
-    <Compile Include="AssetIdentifier.cs" />
+    <Compile Include="ExportSettings.cs" />
+    <Compile Include="GridChangeTracker.cs" />
+    <Compile Include="MaterialLibrary.cs" />
     <Compile Include="MiniLog.cs" />
     <Compile Include="NeverSerenderPlugin.cs" />
+    <Compile Include="Output\BlockProperties.cs" />
+    <Compile Include="Output\Event.cs" />
+    <Compile Include="Output\MaterialProperties.cs" />
+    <Compile Include="Output\Property.cs" />
+    <Compile Include="Output\SpaceWriter.cs" />
+    <Compile Include="Output\BinWriter.cs" />
+    <Compile Include="Output\TextureType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RenderTexture.cs" />
-    <Compile Include="TextureExporter.cs" />
+    <Compile Include="Snapshot\BlockSnapshot.cs" />
+    <Compile Include="Snapshot\ChangeSnapshot.cs" />
+    <Compile Include="Snapshot\EntitySnapshot.cs" />
+    <Compile Include="Snapshot\GridSnapshot.cs" />
+    <Compile Include="Snapshot\LightSnapshot.cs" />
+    <Compile Include="Textures.cs" />
     <Compile Include="Util.cs" />
-    <Compile Include="Util2.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="deploy.bat" />
+    <Content Include="deploy.sh" />
     <Content Include="PluginHub.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -534,7 +535,8 @@
     <PackageReference Include="Lib.Harmony" Version="2.2.2" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>call "$(ProjectDir)\deploy.bat" "$(TargetPath)" "$(SolutionName)"</PostBuildEvent>
-  </PropertyGroup>
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="call &quot;$(ProjectDir)deploy.bat&quot; &quot;$(TargetPath)&quot; &quot;$(SolutionName)&quot;" Condition=" '$(OS)' == 'Windows_NT' " />
+    <Exec Command="bash &quot;$(ProjectDir)deploy.sh&quot; &quot;$(TargetPath)&quot; &quot;$(SolutionName)&quot;" Condition=" '$(OS)' != 'Windows_NT' " />
+</Target>
 </Project>
