--- a/NeverSerender/NeverSerender.csproj
+++ b/NeverSerender/NeverSerender.csproj
@@ -511,8 +511,10 @@
         <Compile Include="Output\Event.cs"/>
         <Compile Include="Output\MaterialProperties.cs"/>
         <Compile Include="Output\Property.cs"/>
+        <Compile Include="Output\RenderMode.cs" />
         <Compile Include="Output\SpaceWriter.cs"/>
         <Compile Include="Output\BinWriter.cs"/>
+        <Compile Include="Output\TextureKind.cs" />
         <Compile Include="Output\TextureType.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <Compile Include="Snapshot\BlockSnapshot.cs"/>
